--- a/capstone-back/.env.example
+++ b/capstone-back/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:G/QBUvQZdDjNjPbYuAA1mE4EBzlPbjazZcKhhvMu5sw=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=updateddddd
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=040604
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -43,13 +43,19 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_HOST=
-PUSHER_PORT=443
-PUSHER_SCHEME=https
-PUSHER_APP_CLUSTER=mt1
+
+MAYA_BASE_URL=https://pg-sandbox.paymaya.com
+MAYA_PUBLIC_KEY=pk-Z0OSzLvIcOI2UIvDhdTGVVfRSSeiGStnceqwUE7n0Ah
+MAYA_SECRET_KEY=sk-X8qolYjy62kIzEbr0QRK1h4b4KDVHaNcwMYk39jInSl
+MAYA_WEBHOOK_TOKEN=maya_webhook_token_123
+
+# PUSHER_APP_ID=
+# PUSHER_APP_KEY=
+# PUSHER_APP_SECRET=
+# PUSHER_HOST=
+# PUSHER_PORT=443
+# PUSHER_SCHEME=https
+# PUSHER_APP_CLUSTER=mt1
 
 VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
